# psa-crypto-esp32

./: .clang-format  .gitignore  CMakeLists.txt  README.md  idf_component.yml
crypto/: aes_decrypt.c  aes_encrypt.c  cbc_mode.c  ccm_mode.c  cmac_mode.c  ctr_mode.c  ctr_prng.c  ecc.c  ecc_dh.c  ecc_dsa.c  ecc_platform_specific.c  hmac.c  hmac_prng.c  sha256.c  utils.c
crypto/tests/: test_ecc_dsa.c  test_ecc_utils.c  test_hmac.c  test_hmac_prng.c  test_sha256.c
examples/Aes/: CMakeLists.txt
examples/AesMultipart/: CMakeLists.txt
examples/GenerateKey/: CMakeLists.txt
hal/flash/: flash_common.c
include/: PSACrypto.h  common.h  entropy.h
psa_layer/: cipher_wrap.c  psa_crypto.c  psa_crypto_cipher.c  psa_crypto_client.c  psa_crypto_driver_wrappers.c  psa_crypto_ecp.c  psa_crypto_hash.c  psa_crypto_porting.c  psa_crypto_rsa.c  psa_crypto_slot_management.c  psa_crypto_storage.c  psa_its_file.c  psa_its_flash.c  psa_its_nvs.c
tests/: test_helpers.h  test_psa_cipher_decrypt.cpp  test_psa_cipher_decrypt_setup.cpp  test_psa_cipher_encrypt.cpp  test_psa_cipher_encrypt_setup.cpp  test_psa_cipher_generate_iv.cpp  test_psa_cipher_update.cpp  test_psa_copy_key.cpp  test_psa_crypto_init.cpp  test_psa_destroy_key.cpp  test_psa_export_key.cpp  test_psa_export_public_key.cpp  test_psa_generate_key.cpp  test_psa_generate_random.cpp  test_psa_hash_abort.cpp  test_psa_hash_clone.cpp  test_psa_hash_compare.cpp  test_psa_hash_compute.cpp  test_psa_hash_finish.cpp  test_psa_hash_setup.cpp  test_psa_hash_update.cpp  test_psa_hash_verify.cpp  test_psa_import_key.cpp
tools/: clang-format.sh
(+125 files in other folders)
