idf_component_register(SRCS "crypto/aes_decrypt.c"
							"crypto/aes_encrypt.c"
							"crypto/cbc_mode.c"
							"crypto/ccm_mode.c"
							"crypto/cmac_mode.c"
							"crypto/ctr_mode.c"
							"crypto/ctr_prng.c"
							"crypto/ecc_dh.c"
							"crypto/ecc_dsa.c"
							"crypto/ecc_platform_specific.c"
							"crypto/ecc.c"
							"crypto/hmac_prng.c"
							"crypto/hmac.c"
							"crypto/sha256.c"
							"crypto/utils.c"
							"psa_layer/cipher_wrap.c"
							"psa_layer/psa_crypto_cipher.c"
							"psa_layer/psa_crypto_client.c"
							"psa_layer/psa_crypto_driver_wrappers.c"
							"psa_layer/psa_crypto_ecp.c"
							"psa_layer/psa_crypto_hash.c"
							"psa_layer/psa_crypto_rsa.c"
							"psa_layer/psa_crypto_porting.c"
							"psa_layer/psa_crypto_slot_management.c"
							"psa_layer/psa_crypto.c"
							"psa_layer/psa_crypto_storage.c"
							"psa_layer/psa_its_file.c"
							"psa_layer/psa_its_flash.c"
							"psa_layer/psa_its_nvs.c"
#							"psa_layer/acc/acc_driver_hash.c"
#							"psa_layer/acc/acc_driver_cipher.c"
#							"psa_layer/acc/acc_driver_rsa.c"
							"hal/flash/flash_common.c"
							"hal/flash/soc/esp32/flash.c"
							"hal/nvs/nvs_common.c"
							"hal/nvs/soc/esp32/nvs_esp32.c"
                    INCLUDE_DIRS "include" "include/backends" "$ENV{IDF_PATH}components/nvs_flash/include" "$ENV{IDF_PATH}components/esp_partition/include"
                    REQUIRES mbedtls)

target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")                    

